--- a/api/templates/dashboard.html
+++ b/api/templates/dashboard.html
@@ -8,7 +8,7 @@
 
 <div class="flex justify-between items-center">
     <div class="p-3 pr-0 flex flex-col space-y-2">
-        <h1 class="text-4xl font-bold">Welcome, Pietz</h1>
+        <h1 class="text-4xl font-bold">Welcome, {{ user.username }}</h1>
         <h3 class="text-md text-neutral-500">Let's build awesome things together!</h3>
     </div>
     <div x-data="{ modalOpen: false, slideOverOpen: false }" @keydown.escape.window="modalOpen = false"
@@ -18,10 +18,10 @@
     </div>
 </div>
 <div class="grid gap-4 md:grid-cols-2 lg:grid-cols-4">
-    {{ tile("Available Characters", "XXX", "ticket") }}
-    {{ tile("Average Latency", "XXX", "timer", "ms") }}
-    {{ tile("Successful Calls", "XXX", "activity", "%") }}
-    {{ tile("Invocations", "XXX", "hash") }}
+    {{ tile("Available Characters", user.chars, "ticket") }}
+    {{ tile("Average Latency", user.latency, "timer", "ms") }}
+    {{ tile("Successful Calls", user.success, "activity", "%") }}
+    {{ tile("Invocations", user.invocations, "hash") }}
 </div>
 <div class="rounded-lg border bg-white shadow-sm">
     {{ table(["Test", "Foobar"], [[1, 2], [3, 4]]) }}
