--- a/api/templates/table.html
+++ b/api/templates/table.html
@@ -1,4 +1,4 @@
-{% if eps|length > 1 %}
+{% if projects|length > 0 %}
 <div id="table" class="rounded-lg border bg-white shadow-sm">
     <div class="flex flex-col">
         <div class="overflow-x-auto">
@@ -17,18 +17,18 @@
                             </tr>
                         </thead>
                         <tbody class="divide-y divide-neutral-200">
-                            {% for ep in eps %}
+                            {% for p in projects %}
                             <tr class="text-neutral-800 hover:bg-neutral-100">
                                 <td class="px-5 py-4 text-sm font-medium whitespace-nowrap">
-                                    <a href="/app/{{ ep.id }}">
-                                        {{ ep.name }}
+                                    <a href="/app/{{ p.id }}">
+                                        {{ p.name }}
                                     </a>
                                 </td>
-                                <td class="px-5 py-4 text-sm whitespace-nowrap">/{{ ep.id }}</td>
-                                <td class="px-5 py-4 text-sm text-right whitespace-nowrap">{{ ep.chars }}</td>
-                                <td class="px-5 py-4 text-sm text-right whitespace-nowrap">{{ ep.latency }}ms</td>
-                                <td class="px-5 py-4 text-sm text-right whitespace-nowrap">{{ ep.success }}%</td>
-                                <td class="px-5 py-4 text-sm text-right whitespace-nowrap">{{ ep.invocations }}</td>
+                                <td class="px-5 py-4 text-sm whitespace-nowrap">/{{ p.id }}</td>
+                                <td class="px-5 py-4 text-sm text-right whitespace-nowrap">{{ p.chars }}</td>
+                                <td class="px-5 py-4 text-sm text-right whitespace-nowrap">{{ p.latency }}ms</td>
+                                <td class="px-5 py-4 text-sm text-right whitespace-nowrap">{{ p.success }}%</td>
+                                <td class="px-5 py-4 text-sm text-right whitespace-nowrap">{{ p.invocations }}</td>
                                 <td class="px-5 py-4 text-sm text-right whitespace-nowrap">
                                     <a class="text-blue-600 hover:text-blue-700" href="#">Edit</a>
                                 </td>
