delete button, narrower chart, shadowless nav

--- a/components/DashboardMain.jinja
+++ b/components/DashboardMain.jinja
@@ -1,11 +1,9 @@
 {#def user, projects, chart=None #}
 
 <main class="container">
-    <br>
     <section style="display:flex;justify-content:space-between">
-        <h1 style="display:inline-flex;align-items:center">
-
-            <span>Dashboard</span>
+        <h1 style="display:inline-flex;align-items:center;margin:0">
+            Dashboard
         </h1>
         <div>
             <button class="contrast" onclick="modal.showModal()" style="display:inline-flex;align-items:center">
