--- a/components/Navigation.jinja
+++ b/components/Navigation.jinja
@@ -1,5 +1,5 @@
-<header class="container" style="padding: 0;">
-    <nav>
+<header class="container-fluid" style="padding:0; border-bottom: 1px solid var(--pico-card-border-color);">
+    <nav class="container">
         <ul>
             <li>
                 <a href="/app"><img src="/static/img/caipi.svg" width="36" /></a>
@@ -9,7 +9,7 @@
             </li>
         </ul>
         <ul>
-            <li><a href="/logout">Logout</a></li>
+            <li><a class="contrast" href="/logout">Logout</a></li>
         </ul>
     </nav>
 </header>
