--- a/pages/Base.jinja
+++ b/pages/Base.jinja
@@ -18,3 +18,10 @@
 </body>
 
 </html>
+
+<script>
+    function copy(event, text) {
+        event.preventDefault();
+        navigator.clipboard.writeText(text);
+    }
+</script>
