new try EP button, new color for chart, new nav fpr landing

--- a/components/AdvancedSettings.jinja
+++ b/components/AdvancedSettings.jinja
@@ -14,19 +14,17 @@
         <div>
             <div style="height: 36px">
                 <label>
-                    <input name="collect_payload" type="checkbox" role="switch" disabled>
-                    Collect Payload Data in Invocations
-                    <strong><small>Pro</small></strong>
+                    <input name="collect_payload" type="checkbox" role="switch">
+                    Collect Payload
                 </label>
             </div>
-            <label>
+            {# <label>
                 <input name="status_code" type="checkbox" role="switch">
                 Include HTTP Status Code in Response
-            </label>
+            </label> #}
             <label>
-                <input name="ai_validation" type="checkbox" role="switch" disabled>
-                Validate Response Quality with AI
-                <strong><small>Pro</small></strong>
+                <input name="ai_validation" type="checkbox" role="switch">
+                AI Validation
             </label>
         </div>
     </div>
