--- a/components/DashboardMain.jinja
+++ b/components/DashboardMain.jinja
@@ -23,7 +23,7 @@
     </section>
     {% if chart %}
     <section class="grid">
-        <article>
+        <article style="padding:0">
             {{ chart }}
         </article>
     </section>
