--- a/components/InvokeResponse.jinja
+++ b/components/InvokeResponse.jinja
@@ -1,8 +1,13 @@
-{#def payload #}
+{#def payload, disabled=False #}
 
 <div id="response" style="display:block; text-align:left; width:100%;">
     {% for k, v in payload.items() %}
+    {% if disabled %}
+    <label for="{{ k }}" style="color: var(--pico-muted-color)"><strong>{{ k }}</strong></label>
+    {% else %}
     <label for="{{ k }}"><strong>{{ k }}</strong></label>
-    <input type="text" name="{{ k }}" aria-label="{{ k }}" value="{{ v }}" style="width:100%;" />
+    {% endif %}
+    <input type="text" name="{{ k }}" aria-label="{{ k }}" {% if not disabled%} value="{{ v }}" {% endif %}
+        style="width:100%;" readonly {% if disabled%} disabled {% endif %} />
     {% endfor %}
 </div>
