--- a/components/Navigation.jinja
+++ b/components/Navigation.jinja
@@ -5,7 +5,7 @@
                 <a href="/app"><img src="/static/img/caipi.svg" width="36" /></a>
             </li>
             <li>
-                <h4 style="margin-bottom: 0">caipi.ai</h4>
+                <h4 style="margin-bottom: 0;color: var(--pico-h1-color)">caipi.ai</h4>
             </li>
         </ul>
         <ul>
