--- a/pages/Home.jinja
+++ b/pages/Home.jinja
@@ -1,34 +1,16 @@
 <Base title="caipi.ai - Create, Monitor & Test AIPIs">
-<header class="container-fluid"
-    style="padding:0; border-bottom: 1px solid var(--pico-card-border-color);position:sticky;top:0;background-color: var(--pico-background-color)">
-    <nav class="container" style="">
-        <ul>
-            <li>
-                <a href="/app"><img src="/static/img/caipi.svg" width="36" /></a>
-            </li>
-            <li>
-                <h4 style="margin-bottom: 0">caipi.ai</h4>
-            </li>
-        </ul>
-        <ul>
-            <li><a class="contrast" href="#features">Features</a></li>
-            <li><a class="contrast" href="#demo">Demo</a></li>
-            <li><a class="contrast" href="#pricing">Pricing</a></li>
-            <li><a href="/login"><button class="contrast">Login</button></a></li>
-        </ul>
-    </nav>
-</header>
+<Header />
 
 <main class="container">
     <section id="hero" style="padding: 180px 0; text-align: center">
         <hgroup>
             <h1 style="font-size:56px;font-weight:bold;margin-bottom:24px">Your Shortcut to AI Integration</h1>
-            <p style="font-size:22px;margin-bottom: 32px">Introducing AIPIs: Single purpose programmatic functions
-                outsourced to an AI
-                model.
+            <p style="font-size:22px;margin-bottom: 32px">
+                Introducing AIPIs: Single purpose programmatic functions outsourced to an AI model.
             </p>
         </hgroup>
-        <a href="/app"><button class="contrast" style="padding: 12px 32px; font-size: 18px">Get Started</button></a>
+        <a href="/app"><button class="contrast" style="padding: 12px 32px; font-size: 18px"><span
+                    class="caipi-gradient">Get Started</span></button></a>
     </section>
 
     <section id="features">
@@ -76,9 +58,5 @@
     </section>
 </main>
 
-<footer class="container">
-    <small>
-        <a href="#">Terms of Service</a> | <a href="#">Privacy Policy</a>
-    </small>
-</footer>
+<Footer />
 </Base>
