ui tweak, deleted old vscode project files

--- a/pages/Login.jinja
+++ b/pages/Login.jinja
@@ -16,12 +16,9 @@
     </main>
 
     <footer class="container" style="display: flex; justify-content: space-around;">
-        <p style="text-shadow: 0 0 15px var(--pico-background-color), 0 0 15px var(--pico-background-color)">By signing
-            in you agree to our Terms of
-            Service
-            and
-            Privacy
-            Policy</p>
+        <p style="text-shadow: 0 0 15px var(--pico-background-color)">
+            By signing in you agree to our Terms of Service and Privacy Policy
+        </p>
     </footer>
 </div>
 </Base>
